--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,37 @@
+@font-face {
+  font-family: 'Helvetica';
+  src: local('Helvetica'), url(./fonts/Helvetica.ttf) format('opentype');
+}
+
+/* @font-face {
+  font-family: 'Helvetica';
+  font-weight: 900;
+  src: local('Helvetica'), url(./fonts/Helvetica-Bold.ttf) format('opentype');
+}
+
+@font-face {
+  font-family: 'Helvetica';
+  font-weight: 700;
+  src: local('Helvetica'), url(./fonts/Helvetica-BoldOblique.ttf) format('opentype');
+}
+
+@font-face {
+  font-family: 'Helvetica';
+  font-weight: 300;
+  src: local('Helvetica'), url(./fonts/helvetica-light-587ebe5a59211.ttf) format('opentype');
+}
+
+@font-face {
+  font-family: 'Helvetica';
+  font-weight: 400;
+  src: local('Helvetica'), url(./fonts//Helvetica-Oblique.ttf) format('opentype');
+} */
+
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Helvetica;
 }
 
 * {
@@ -14,6 +40,5 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: Helvetica;
 }
