--- a/client/src/components/messages/Messages.module.css
+++ b/client/src/components/messages/Messages.module.css
@@ -3,6 +3,9 @@
     /* width: 66%; */
     width: 42%;
     border-right: 1px solid rgba(204, 204, 204, 0.37);
+    z-index: 999;
+    background: #fff;
+    transition: all 300ms ease-in;
 }
 
 .messages__content {
