--- a/client/src/pages/Auth/Login/Login.module.css
+++ b/client/src/pages/Auth/Login/Login.module.css
@@ -7,7 +7,7 @@
 }
 
 .form {
-    height: 70%;
+    height: 75%;
     width: 30%;
     display: flex;
     flex-direction: column;
@@ -101,6 +101,21 @@
 .btn:hover {
     background-color: #fff;
     color: #000;
+}
+
+.optional {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.optionalLink {
+    border: none;
+    outline: none;
+    color: blueviolet;
+    cursor: pointer;
+    padding-left: 5px;
 }
 
 @media only screen and (max-width: 805px) {
