--- a/client/src/pages/Auth/SignUp/SignUp.module.css
+++ b/client/src/pages/Auth/SignUp/SignUp.module.css
@@ -1,15 +1,19 @@
 .container {
     width: 100%;
     height: auto;
+}
+
+.divider {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    width: 100%;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 10vh;
-    padding-bottom: 5vh;
 }
 
 .form {
-    height: 70%;
     width: 30%;
     display: flex;
     flex-direction: column;
@@ -128,6 +132,22 @@
     padding: 10px;
     font-size: 13pt;
 }
+
+.optional {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.optionalLink {
+    border: none;
+    outline: none;
+    color: blueviolet;
+    cursor: pointer;
+    padding-left: 5px;
+}
+
 
 @media only screen and (max-width: 805px) {
     .input_long {
