--- a/client/src/pages/editProfile/EditProfile.module.css
+++ b/client/src/pages/editProfile/EditProfile.module.css
@@ -8,6 +8,17 @@
     scrollbar-width: thin;
 }
 
+.toast {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    /* background: rgba(0, 0, 0, 0.05); */
+    background: rgba(0, 0, 0, 1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .form {
     width: 50%;
     display: flex;
