--- a/client/src/components/profile/Profile.module.css
+++ b/client/src/components/profile/Profile.module.css
@@ -136,7 +136,9 @@
     display: flex;
     width: 100%;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap: 10px;
+    flex-wrap: wrap;
 }
 
 .mediaContainer>p {
