--- a/client/src/components/profile/Profile.module.css
+++ b/client/src/components/profile/Profile.module.css
@@ -58,6 +58,14 @@
 .Profile_info__title {
     font-size: 13pt;
     font-weight: 700;
+    cursor: pointer;
+    border-bottom: 1px solid rgba(41, 35, 35, 0);
+    outline: none;
+    text-decoration: none;
+}
+
+.Profile_info__title:hover {
+    border-bottom: 1px solid rgb(73, 69, 69);
 }
 
 .Profile_info__city {
