--- a/client/src/Global.module.css
+++ b/client/src/Global.module.css
@@ -14,3 +14,42 @@
 .messanger {
     display: flex;
 }
+
+.call {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+
+    background: rgba(0, 0, 0, 0.751);
+    z-index: 9999;
+}
+
+.image {
+    width: 40%;
+    height: 70%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.iconContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+.icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    cursor: pointer;
+}
