--- a/client/src/components/messages/header/Header.module.css
+++ b/client/src/components/messages/header/Header.module.css
@@ -22,6 +22,13 @@
     gap: 10px;
 }
 
+.header_right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
 .imgContainer {
     position: relative;
     width: 50px;
